Issue with home-section and absolute position, overflow the text

--- a/css/style.css
+++ b/css/style.css
@@ -22,7 +22,6 @@ img.nav-link {
 }
 
 #home-section .dark-overlay {
-    position: absolute;
     top: 0;
     left: 0;
     width: 100%;
